- fixes the following tickets:     8	 Fix draggable bug in editor     24	 Should be possible to display more than ten property paths     9	 Fix 'undefined' alerts on opening the Linking Task Editor     20	 Add a reload Button next to the paths list     53	 LinkSpec save/validation fails even if required parameter are defined     55	 Ugly layout for user defined property paths     59	 Link specification nodes are not loaded in the central pane in Chrome     43	 Fix overflowing of boxes in Editor     52	 Levenshtein distance node has wrong param list

--- a/silk2/silk-workbench/silk-workbench-webapp/src/main/webapp/static/css/editor.css
+++ b/silk2/silk-workbench/silk-workbench-webapp/src/main/webapp/static/css/editor.css
@@ -110,27 +110,37 @@ body{
 
 .sourcePath h5 {
 	background-color:#C354BF;
+    height: 15px;
 }
 
 .targetPath h5 {
 	background-color:#C354BF;
+    height: 15px;
 }
 
 .transformDiv h5 {
 	background-color:#0cc481;
+    height: 15px;
 }
 
 .compareDiv h5 {
 	background-color:#e59829;
+    height: 15px;
 }
 
 .aggregateDiv h5 {
 	background-color:#1484d4;
+    height: 15px;
 }
 
 .dragDiv div {
 	padding:3px 5px;
 	margin-bottom:5px;
+}
+
+.dragDiv h5 div {
+	padding:0px;
+	margin-bottom:0px;
 }
 
 .more {
